// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default 1`] = `
<div
  className="ant-typography {}"
  id="default"
  style={
    Object {
      "WebkitLineClamp": null,
    }
  }
>
  
</div>
`;

exports[`Render properties.content 1`] = `
<div
  className="ant-typography {}"
  id="properties.content"
  style={
    Object {
      "WebkitLineClamp": null,
    }
  }
>
  This is a paragraph
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.content 1`] = `true`;

exports[`Test Schema properties.content 2`] = `null`;
